jenkins-agent-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jenkins-agent
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-agent
  template:
    metadata:
      labels:
        app: jenkins-agent
    spec:
      nodeName: k8s-node3
      serviceAccount: jenkins-k8s-sa
      containers:
      - name: jenkins-agent
        securityContext:
          runAsUser: 0      
          runAsGroup: 0
        image: jenkins/inbound-agent:latest-jdk17
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: jenkins-agent-volume
          subPath: jenkins-home
          mountPath: /home/jenkins
        - name: docker-sock
          mountPath: /var/run/docker.sock
        - name: docker-bin
          mountPath: /usr/bin/docker
      volumes:
      - name: jenkins-agent-volume
        persistentVolumeClaim:
          claimName: jenkins-agent-data
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
          type: Socket
      - name: docker-bin
        hostPath:
          path: /usr/bin/docker
          type: File
